# pkm3

./: .gitignore  ARCHITECTURE.md  PRD.md  README.md  START_HERE.md  pyproject.toml  task.md
archieves/: ARCHITECTURE_v1.md  ARCHITECTURE_v2.md  PRD_v1.md  PRD_v2.md
src/aivault/: __init__.py  cli.py  config.py  db.py  dedupe.py  models.py  platform_paths.py  raw_store.py  redaction.py  search.py  service.py
src/aivault/adapters/: __init__.py  antigravity.py  base.py  chatgpt.py  claude_code.py  claude_export.py  cline.py  codex.py  cursor.py  folder_import.py  specstory.py
src/aivault/exporters/: __init__.py  llmwiki.py
src/aivault/web/: __init__.py  api.py  server.py
src/aivault/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_antigravity_adapter.py  test_claude_code_adapter.py  test_codex_adapter.py  test_config_sync.py  test_cross_os.py  test_dedupe.py  test_llmwiki_export.py  test_more_adapters.py  test_platform_paths.py  test_web_api.py  test_web_server.py
tests/fixtures/: antigravity-session.jsonl  chatgpt-export.json  claude-code-session.jsonl  claude-export.json  cline-task.json  codex-session.jsonl  cursor-session.json  specstory-history.md
