[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aivault"
version = "0.4.0"
description = "Local-first AI session collector, inbox, search, triage, browse, and LLM Wiki export layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
aivault = "aivault.cli:main"

# Dev tooling lives in a PEP 735 dependency group so `uv sync` installs it into
# the project-local .venv by default (no global package pollution).
[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aivault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
